--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "push": "git push https://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@github.com/hoangtien0105/question-client.git"
   },
   "dependencies": {
-    "@use-gesture/react": "^10.2.16",
+    "@ant-design/icons": "^4.7.0",
+    "@svgr/webpack": "^6.2.1",
+    "antd": "^4.21.6",
     "cheerio": "^1.0.0-rc.12",
     "highlight.js": "^11.5.1",
     "html-entities": "^2.3.3",
@@ -22,15 +24,9 @@
     "npm": "^8.13.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-paginate": "^8.1.3",
     "react-query": "^3.39.1",
-    "react-resizable": "^3.0.4",
-    "react-scroll": "^1.8.7",
-    "react-spring": "^9.4.5",
-    "react-topbar-progress-indicator": "^4.1.1",
     "react-use": "^17.4.0",
     "showdown": "^2.1.0",
-    "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "turndown": "^7.1.1"
   },
@@ -38,7 +34,6 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
-    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
   }
