--- a/.github/workflows/questions-client-deployment.yml
+++ b/.github/workflows/questions-client-deployment.yml
@@ -37,5 +37,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages # The branch the action should deploy to.
+        BRANCH: .next # The branch the action should deploy to.
         FOLDER: .next # The folder the action should deploy.
