--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "startup": "pm2 start npm --name \"question-client\" -- start",
-    "push": "git push https://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@github.com/hoangtien0105/question-client.git"
+    "postbuild": "next-sitemap"
+  
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
@@ -20,6 +21,7 @@
     "i": "^0.3.7",
     "next": "12.2.0",
     "next-seo": "^5.4.0",
+    "next-sitemap": "^3.1.10",
     "npm": "^8.13.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
