--- a/.github/workflows/questions-client-deployment.yml
+++ b/.github/workflows/questions-client-deployment.yml
@@ -32,7 +32,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
-    
+    - run: npm run sitemap
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
